tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_derive_complex.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros = { path = \"/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ComplexDeriveMacro)]\nstruct EmptyStruct {}\n\n#[derive(ComplexDeriveMacroV2)]\nstruct EmptyStructV2 {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ComplexDeriveMacro)]
#[derive(Complex<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ComplexDeriveMacro)]
struct EmptyStruct {}
fn generated_function() {}

trait MyTrait<T> {
    fn foo(t: T);
}

impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
"""

[[expansions]]
analyzed_lines = """
#[derive<caret>(ComplexDeriveMacroV2)]
#[derive(Complex<caret>DeriveMacroV2)]
struct Empty<caret>StructV2 {}
struct EmptyStructV2 {<caret>}
"""
generated_code = """
#[derive(ComplexDeriveMacroV2)]
struct EmptyStructV2 {}
fn another_generated_function_v2() {}
fn generated_function_v2() {}
trait MyTraitV2<T> {
    fn bar(t: T);
}
impl MyTraitImpl of MyTraitV2<felt252> {
    fn bar(t: felt252) {}
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ComplexDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 3
          character: 9
        end:
          line: 3
          character: 29
      severity: 1
      code: E2118
      message: |-
        The name `MyTraitImpl` is defined multiple times.
        note: this error originates in the derive macro: `ComplexDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 101
            end:
              line: 0
              character: 112
        message: Diagnostic mapped from here.
