tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_derive_diagnostics_land_on_own_derive.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros = { path = \"/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n// V1 first: the error inside the V2 expansion must land on the second derive.\n#[derive(SimpleDeriveMacro, ErroneousDeriveMacroV2)]\nstruct A {\n    x: u32,\n}\n\n// V2 first: the error inside the V1 expansion must land on the second derive.\n#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacro)]\nstruct B {\n    x: u32,\n}"
expression: report
snapshot_kind: text
---
[[expansions]]
analyzed_lines = """
#[derive(SimpleDeriveMacro, ErroneousDeriveMacroV2)]<caret>
"""
generated_code = """
#[derive(SimpleDeriveMacro, ErroneousDeriveMacroV2)]
struct A {
    x: u32,
}
trait MyTrait<T> {
    fn foo(t: T);
}

impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
fn erroneous_generated_fn_v2() {
    let _x: felt252 = 1_u32;
}
"""

[[expansions]]
analyzed_lines = """
#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacro)]<caret>
"""
generated_code = """
// V2 first: the error inside the V1 expansion must land on the second derive.
#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacro)]
struct B {
    x: u32,
}
trait MyTrait<T> {
    fn foo(t: T);
}
impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
fn erroneous_generated_fn_v1() {
    let _x: felt252 = 1_u32;
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ErroneousDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 1
          character: 28
        end:
          line: 1
          character: 50
      severity: 1
      code: E2041
      message: |-
        Unexpected argument type. Expected: "felt252", found: "u32".
        note: this error originates in one of the derive macros: `SimpleDeriveMacro`, `ErroneousDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 7
              character: 46
            end:
              line: 7
              character: 51
        message: Diagnostic mapped from here.
  - related_code: SimpleDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 7
          character: 9
        end:
          line: 7
          character: 28
      severity: 1
      code: E2118
      message: |-
        The name `MyTrait` is defined multiple times.
        note: this error originates in one of the derive macros: `SimpleDeriveMacroV2`, `ErroneousDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 6
            end:
              line: 0
              character: 13
        message: Diagnostic mapped from here.
  - related_code: SimpleDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 7
          character: 9
        end:
          line: 7
          character: 28
      severity: 1
      code: E2118
      message: |-
        The name `MyTraitImpl` is defined multiple times.
        note: this error originates in one of the derive macros: `SimpleDeriveMacroV2`, `ErroneousDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 35
            end:
              line: 0
              character: 46
        message: Diagnostic mapped from here.
  - related_code: ErroneousDeriveMacro
    diagnostic:
      range:
        start:
          line: 7
          character: 30
        end:
          line: 7
          character: 50
      severity: 1
      code: E2041
      message: |-
        Unexpected argument type. Expected: "felt252", found: "u32".
        note: this error originates in one of the derive macros: `SimpleDeriveMacroV2`, `ErroneousDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 22
            end:
              line: 1
              character: 27
        message: Diagnostic mapped from here.
