tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_derive_with_error.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ErrorDeriveMacro)]\nstruct EmptyStruct {}\n\n#[derive(ErrorDeriveMacroV2)]\nstruct EmptyStructV2 {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveMacro)]
#[derive(Error<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ErrorDeriveMacro)]
struct EmptyStruct {}
"""

[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveMacroV2)]
#[derive(Error<caret>DeriveMacroV2)]
struct Empty<caret>StructV2 {}
struct EmptyStructV2 {<caret>}
"""
generated_code = """
#[derive(ErrorDeriveMacroV2)]
struct EmptyStructV2 {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ErrorDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 25
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
  - related_code: ErrorDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 3
          character: 9
        end:
          line: 3
          character: 27
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
